# alkminer

./: AGENTS.md  Cargo.toml  README.md
docs/: IMPLEMENTATION_PLAN.md  TESTING.md  mining_parameters.md
docs/research/: nonce_distribution.md  rust_sha256_simd_wasm.md  stratified_nonce_sampling.md
shaders/partials/: rng.hbs  sha256.hbs
shaders/templates/: coinbase_merkle_packed.hbs  merkle_root_packed.hbs
src/: lib.rs
src/compute/: buffer.rs  device.rs  kernel.rs  mod.rs  module.rs
src/crypto/: block_header.rs  merkle.rs  mod.rs  rng.rs  sha256.rs
src/modules/: coinbase_merkle.rs  increment.rs  mod.rs
tests/: block_header_tests.rs  buffer_tests.rs  coinbase_merkle_tests.rs  crypto_tests.rs  device_tests.rs  kernel_tests.rs  merkle_tests.rs  module_tests.rs
tests/common/: mod.rs
tests/data/: foundry.txt
